fix: add display none to webkit scrollbar

--- a/src/components/weather/style.scss
+++ b/src/components/weather/style.scss
@@ -86,6 +86,7 @@
     #horizontal-scroll-wrapper{
         &::-webkit-scrollbar,
         &::-webkit-scrollbar-button{
+            display: none;
             width: 0px;
             height: 0px;
         }
